--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/qrcode.css">
 </head>
 <body>
- <div class="text">
+ <nav class="text">
   <img src="img/image-qr-code.png" alt="qr-code" width="200px" height="200px">
     <p class="improve">Improve your front-end <br>
         skills by building projects
@@ -15,6 +15,6 @@
       <p class="tiny">Scan the QR code to visit Frontend Mentor and take your coding 
         skills to the next level
       </p>
-</div>
+  </nav>
 </body>
 </html>
