--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
  <nav class="text">
   <img src="img/image-qr-code.png" alt="qr-code" width="200px" height="200px">
-    <p class="improve">Improve your front-end <br>
+    <h1>Improve your front-end <br>
         skills by building projects
-    </p>
+    <h1>
       <p class="tiny">Scan the QR code to visit Frontend Mentor and take your coding 
         skills to the next level
       </p>
